Defect fix: first pass missed running a simulation for a specified date, as required.
This also means that the integration tests can be completely
deterministic, as the prices for a past date will not change.