@@ -4,18 +4,19 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.*;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
 import java.math.BigDecimal;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
 
 @Service
-public class CoinCapPriceService {
+public class CoinCapPriceService  extends AbstractCoinCapService {
     private final Logger logger = LoggerFactory.getLogger(CoinCapPriceService.class);
 
     @Value( "${spicep.coinCapPriceService.apiKey}" )
@@ -39,27 +40,20 @@ public class CoinCapPriceService {
                          symbol);
 
             RestTemplate restTemplate = new RestTemplate();
-
-            HttpHeaders headers = new HttpHeaders();
-            headers.setAccept(Collections.singletonList(MediaType.APPLICATION_JSON));
-            headers.add("user-agent",
-                        "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.99 Safari/537.36");
-            headers.add("Authorization", "Bearer %s".formatted(apiKey));
-
             HttpEntity<String> entity = new HttpEntity<>("parameters",
-                                                         headers);
-            String thisUrl = "%s/%s/%s".formatted(url,
-                                                  "/price/bysymbol/",
+                                                         getHeaders());
+
+            String thisUrl = "%s/price/bysymbol/%s".formatted(url,
                                                   symbol);
             ResponseEntity<PriceResponse> result =
                     restTemplate.exchange(thisUrl,
                                           HttpMethod.GET,
                                           entity,
                                           PriceResponse.class);
-            logger.debug("Result = {}",
+            logger.trace("Result = {}",
                         result);
             PriceResponse body = result.getBody();
-            BigDecimal price = body.getData().get(0);
+            BigDecimal price = body.data.getFirst();
             logger.debug("Got price {} for symbol {}",
                         price,
                         symbol);
@@ -72,15 +66,15 @@ public class CoinCapPriceService {
         }
     }
 
-    public static class PriceResponse {
-        public long timestamp;
-        public List<BigDecimal> data;
+    private static class PriceResponse {
+        private long timestamp;
+        private List<BigDecimal> data;
 
         public long getTimestamp() {
             return timestamp;
         }
 
-        public void setTimestamp(final long timestamp) {
+        public void setTimestamp(long timestamp) {
             this.timestamp = timestamp;
         }
 
@@ -88,7 +82,7 @@ public class CoinCapPriceService {
             return data;
         }
 
-        public void setData(final List<BigDecimal> data) {
+        public void setData(List<BigDecimal> data) {
             this.data = data;
         }
 
